# serializer version: 1
# name: TestSparseSubset.test_netcdf_attributes_ncdump[B-Sulafjorden.nc.txt]
  '''
  netcdf B-Sulafjorden {
  dimensions:
  	time = 1592 ;
  	depth_level = 1 ;
  variables:
  	double elevation(time, depth_level) ;
  		elevation:_FillValue = NaN ;
  		string elevation:positive = "up" ;
  		string elevation:units = "m" ;
  		elevation:valid_min = -12000. ;
  		elevation:valid_max = 12000. ;
  		string elevation:standard_name = "elevation" ;
  		string elevation:axis = "Z" ;
  	double PSAL(time, depth_level) ;
  		PSAL:_FillValue = NaN ;
  		string PSAL:standard_name = "sea_water_practical_salinity" ;
  		string PSAL:units = "0.001" ;
  		string PSAL:ancillary_variable = "PSAL_QC" ;
  		string PSAL:coordinates = "time elevation latitude longitude" ;
  	double TEMP(time, depth_level) ;
  		TEMP:_FillValue = NaN ;
  		string TEMP:standard_name = "sea_water_temperature" ;
  		string TEMP:units = "degrees_C" ;
  		string TEMP:ancillary_variable = "TEMP_QC" ;
  		string TEMP:coordinates = "time elevation latitude longitude" ;
  	int64 PSAL_QC(time, depth_level) ;
  		string PSAL_QC:long_name = "Quality control flag for PSAL" ;
  		PSAL_QC:flags_values = 0LL, 1LL, 2LL, 3LL, 4LL, 5LL, 6LL, 7LL, 8LL, 9LL ;
  		string PSAL_QC:flags_meanings = "no_qc_performed good_data probably_good_data bad_data_that_are_potentially_correctable bad_data value_changed value_below_detection nominal_value interpolated_value missing_value" ;
  		string PSAL_QC:coordinates = "time elevation latitude longitude" ;
  	int64 TEMP_QC(time, depth_level) ;
  		string TEMP_QC:long_name = "Quality control flag for TEMP" ;
  		TEMP_QC:flags_values = 0LL, 1LL, 2LL, 3LL, 4LL, 5LL, 6LL, 7LL, 8LL, 9LL ;
  		string TEMP_QC:flags_meanings = "no_qc_performed good_data probably_good_data bad_data_that_are_potentially_correctable bad_data value_changed value_below_detection nominal_value interpolated_value missing_value" ;
  		string TEMP_QC:coordinates = "time elevation latitude longitude" ;
  	double longitude(time, depth_level) ;
  		longitude:_FillValue = NaN ;
  		string longitude:units = "degrees_east" ;
  		string longitude:axis = "X" ;
  		longitude:valid_min = -180. ;
  		longitude:valid_max = 180. ;
  		string longitude:standard_name = "longitude" ;
  	double latitude(time, depth_level) ;
  		latitude:_FillValue = NaN ;
  		string latitude:units = "degrees_north" ;
  		string latitude:axis = "Y" ;
  		latitude:valid_min = -90. ;
  		latitude:valid_max = 90. ;
  		string latitude:standard_name = "latitude" ;
  	int64 time(time) ;
  		string time:units = "seconds since 1970-01-01T00:00:00Z" ;
  		string time:axis = "T" ;
  		string time:standard_name = "time" ;
  		string time:calendar = "standard" ;
  // global attributes:
  		string :platform_code = "B-Sulafjorden" ;
  		string :platform_type = "MO" ;
  		string :institution = "The Norwegian Public Roads Administration" ;
  		string :doi = "https://doi.org/10.48670/moi-00031" ;
  		string :institution_edmo_code = "5778" ;
  		string :time_coverage_start = "2023-11-25T00:00:00Z" ;
  		string :time_coverage_end = "2023-11-26T03:00:00Z" ;
  		string :last_date_observation = "2023-11-26T03:00:00Z" ;
  		:geospatial_lat_min = 62.4049 ;
  		:geospatial_lat_max = 62.4049 ;
  		:last_latitude_observation = 62.4049 ;
  		:geospatial_lon_min = 6.0765 ;
  		:geospatial_lon_max = 6.0765 ;
  		:last_longitude_observation = 6.0765 ;
  		:geospatial_vertical_min = -1. ;
  		:geospatial_vertical_max = -1. ;
  		string :references = "http://marine.copernicus.eu" ;
  		string :license = "https://marine.copernicus.eu/user-corner/service-commitments-and-licence" ;
  		string :product_id = "INSITU_ARC_PHYBGCWAV_DISCRETE_MYNRT_013_031" ;
  		string :dataset_id = "cmems_obs-ins_arc_phybgcwav_mynrt_na_irr" ;
  		string :Conventions = "CF-1.9 ACDD-1.3" ;
  		string :title = "Subset of dataset cmems_obs-ins_arc_phybgcwav_mynrt_na_irr with Copernicus Marine Toolbox" ;
  		string :contact = "servicedesk.cmems@mercator-ocean.eu" ;
  }
  '''
# ---
# name: TestSparseSubset.test_netcdf_attributes_ncdump[F-Vartdalsfjorden.nc.txt]
  '''
  netcdf F-Vartdalsfjorden {
  dimensions:
  	time = 1621 ;
  	depth_level = 1 ;
  variables:
  	double elevation(time, depth_level) ;
  		elevation:_FillValue = NaN ;
  		string elevation:positive = "up" ;
  		string elevation:units = "m" ;
  		elevation:valid_min = -12000. ;
  		elevation:valid_max = 12000. ;
  		string elevation:standard_name = "elevation" ;
  		string elevation:axis = "Z" ;
  	double PSAL(time, depth_level) ;
  		PSAL:_FillValue = NaN ;
  		string PSAL:standard_name = "sea_water_practical_salinity" ;
  		string PSAL:units = "0.001" ;
  		string PSAL:ancillary_variable = "PSAL_QC" ;
  		string PSAL:coordinates = "time elevation latitude longitude" ;
  	double TEMP(time, depth_level) ;
  		TEMP:_FillValue = NaN ;
  		string TEMP:standard_name = "sea_water_temperature" ;
  		string TEMP:units = "degrees_C" ;
  		string TEMP:ancillary_variable = "TEMP_QC" ;
  		string TEMP:coordinates = "time elevation latitude longitude" ;
  	int64 PSAL_QC(time, depth_level) ;
  		string PSAL_QC:long_name = "Quality control flag for PSAL" ;
  		PSAL_QC:flags_values = 0LL, 1LL, 2LL, 3LL, 4LL, 5LL, 6LL, 7LL, 8LL, 9LL ;
  		string PSAL_QC:flags_meanings = "no_qc_performed good_data probably_good_data bad_data_that_are_potentially_correctable bad_data value_changed value_below_detection nominal_value interpolated_value missing_value" ;
  		string PSAL_QC:coordinates = "time elevation latitude longitude" ;
  	int64 TEMP_QC(time, depth_level) ;
  		string TEMP_QC:long_name = "Quality control flag for TEMP" ;
  		TEMP_QC:flags_values = 0LL, 1LL, 2LL, 3LL, 4LL, 5LL, 6LL, 7LL, 8LL, 9LL ;
  		string TEMP_QC:flags_meanings = "no_qc_performed good_data probably_good_data bad_data_that_are_potentially_correctable bad_data value_changed value_below_detection nominal_value interpolated_value missing_value" ;
  		string TEMP_QC:coordinates = "time elevation latitude longitude" ;
  	double longitude(time, depth_level) ;
  		longitude:_FillValue = NaN ;
  		string longitude:units = "degrees_east" ;
  		string longitude:axis = "X" ;
  		longitude:valid_min = -180. ;
  		longitude:valid_max = 180. ;
  		string longitude:standard_name = "longitude" ;
  	double latitude(time, depth_level) ;
  		latitude:_FillValue = NaN ;
  		string latitude:units = "degrees_north" ;
  		string latitude:axis = "Y" ;
  		latitude:valid_min = -90. ;
  		latitude:valid_max = 90. ;
  		string latitude:standard_name = "latitude" ;
  	int64 time(time) ;
  		string time:units = "seconds since 1970-01-01T00:00:00Z" ;
  		string time:axis = "T" ;
  		string time:standard_name = "time" ;
  		string time:calendar = "standard" ;
  // global attributes:
  		string :platform_code = "F-Vartdalsfjorden" ;
  		string :platform_type = "MO" ;
  		string :institution = "The Norwegian Public Roads Administration" ;
  		string :doi = "https://doi.org/10.48670/moi-00031" ;
  		string :institution_edmo_code = "5778" ;
  		string :time_coverage_start = "2023-11-25T00:00:00Z" ;
  		string :time_coverage_end = "2023-11-26T03:00:00Z" ;
  		string :last_date_observation = "2023-11-26T03:00:00Z" ;
  		:geospatial_lat_min = 62.22 ;
  		:geospatial_lat_max = 62.22 ;
  		:last_latitude_observation = 62.22 ;
  		:geospatial_lon_min = 5.8966 ;
  		:geospatial_lon_max = 5.8966 ;
  		:last_longitude_observation = 5.8966 ;
  		:geospatial_vertical_min = -1. ;
  		:geospatial_vertical_max = -1. ;
  		string :references = "http://marine.copernicus.eu" ;
  		string :license = "https://marine.copernicus.eu/user-corner/service-commitments-and-licence" ;
  		string :product_id = "INSITU_ARC_PHYBGCWAV_DISCRETE_MYNRT_013_031" ;
  		string :dataset_id = "cmems_obs-ins_arc_phybgcwav_mynrt_na_irr" ;
  		string :Conventions = "CF-1.9 ACDD-1.3" ;
  		string :title = "Subset of dataset cmems_obs-ins_arc_phybgcwav_mynrt_na_irr with Copernicus Marine Toolbox" ;
  		string :contact = "servicedesk.cmems@mercator-ocean.eu" ;
  }
  '''
# ---
